@@ -395,6 +395,19 @@
 #db_password
 
 # =================================================================
+# External config files
+# =================================================================
+
+# External configuration files may be included by using the 
+# include_dir option. This defines a directory that will be searched
+# for config files. All files that end in '.conf' will be loaded as
+# a configuration file. It is best to have this as the last option
+# in the main file. This option will only be processed from the main
+# configuration file. The directory specified must not contain the 
+# main configuration file.
+#include_dir
+
+# =================================================================
 # Unsupported rsmb options - for the future
 # =================================================================
 
